k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservation-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reservation.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 80
